[project]
name = "pulseblaster"
version = "0.2.0"
description = ""
authors = [{ name = "ograsdijk", email = "o.grasdijk@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.24.1,<2",
    "spinapi>=3.2.2,<4",
    "tqdm>=4.65",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.mypy.overrides]]
module = [
    "spinapi", "matplotlib.*", "tqdm"
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.282",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=pulseblaster",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["pulseblaster"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B", "A"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.black]
line-length = 100
target-version = ["py311"]
